# noah

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  bot.py  database.py  docker-compose.yml  extract.py  main_marktguru.py  pyproject.toml  telegram_bot.py  transform.py
.github/workflows/: docker-ci.yml
bot/: bot.py  commands.py  handle_io.py  main.py  notify.py  offer.py  scraping.py  user.py  user_input.py  utils.py
bot /: main.py  models.py  telegram_bot.py  utils.py
database/: models.py
github/workflows/: docker-ci.yml
tests/: test_commands.py
